# Tsunami-HySEA

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  README.txt
Algeria/: algeria.txt  mediterranean.txt
Mediterranean/: mediterranean.txt
edanya-uma/Tsunami-HySEA/: README.md
edanya-uma/Tsunami-HySEA/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
edanya-uma/Tsunami-HySEA/ghrs-data/snapshots/: 2025-09-07_100030_views_clones_series_fragment.csv  2025-09-07_230720_views_clones_series_fragment.csv  2025-09-08_230907_top_paths_snapshot.csv  2025-09-08_230907_views_clones_series_fragment.csv  2025-09-09_230153_views_clones_series_fragment.csv  2025-09-10_230143_views_clones_series_fragment.csv  2025-09-11_230144_views_clones_series_fragment.csv  2025-09-12_230149_views_clones_series_fragment.csv  2025-09-13_230135_views_clones_series_fragment.csv  2025-09-14_230152_views_clones_series_fragment.csv  2025-09-15_230132_views_clones_series_fragment.csv  2025-09-16_230138_views_clones_series_fragment.csv  (+9 more)
edanya-uma/Tsunami-HySEA/latest-report/: report.html  report.md  report_for_pdf.html
src/: CMakeLists.txt  Constantes.hxx  FindNetCDF.cmake  Problema.cxx  ShallowWater.cxx
src/GPU/: Arista_kernel.cu  CMakeLists.txt  ComprobarSoporteCUDA.cu  DC3D.cu  Deformacion.cu  Matriz.cu  Metrics.cu  Reduccion_kernel.cu  ShallowWater.cu  SoporteCUDA.cu  Timestep.cu  Volumen_kernel.cu  netcdf.cu  netcdfSeries.cu  netcdfSeries.h  netcdfTH.cu  netcdfTH.h  netcdf_kernel.cu  prtoxy.cu
