CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(TsunamiHySEA)

# Find CUDA
FIND_PACKAGE(CUDA)
IF(NOT CUDA_FOUND)
	MESSAGE(FATAL_ERROR "CUDA not found")
ENDIF(NOT CUDA_FOUND)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

# Find NetCDF
FIND_PACKAGE(NetCDF)
IF (NOT NETCDF_FOUND)
        MESSAGE(FATAL_ERROR "NetCDF not found")
ENDIF (NOT NETCDF_FOUND)
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

# Set the build type to Release
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
IF (NOT CMAKE_BUILD_TYPE)
        SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose build type (Debug, Release)" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

# Build TsunamiHySEA
ADD_SUBDIRECTORY(GPU)

ADD_LIBRARY(Problema Problema.cxx)

ADD_EXECUTABLE(TsunamiHySEA ShallowWater.cxx)
TARGET_LINK_LIBRARIES(TsunamiHySEA Problema GPU ${NETCDF_LIBRARIES})

